unpackaged/main/default/objects/project_cloud__FTE__c/project_cloud__FTE__c.object-meta.xml
<CustomObject>
    <description>Full Time Equivalency</description>
    <label>FTE</label>
    <nameField>
        <displayFormat>FTE-{0000000000}</displayFormat>
        <label>FTE Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FTEs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>