unpackaged/main/default/objects/project_cloud__FTE__c/fields/project_cloud__Calculated_Capacity__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Calculated_Capacity__c</fullName>
    <formula>IF(NOT(project_cloud__IsPlanning__c), project_cloud__Capacity__c * -1, project_cloud__Capacity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>