unpackaged/main/default/objects/project_cloud__FTE__c/fields/project_cloud__Capacity__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Capacity__c</fullName>
    <description>FTE Capacity</description>
    <label>Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>