unpackaged/main/default/objects/project_cloud__FTE__c/fields/project_cloud__Comments__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>