unpackaged/main/default/objects/project_cloud__FTE__c/fields/project_cloud__IsPlanning__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__IsPlanning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, indicates that the FTE was added via the FTE Planning interface</description>
    <label>Planning FTE</label>
    <type>Checkbox</type>
</CustomField>