unpackaged/main/default/objects/project_cloud__FTE__c/fields/project_cloud__Project__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipLabel>FTEs</relationshipLabel>
    <relationshipName>FTEs</relationshipName>
    <type>Lookup</type>
</CustomField>